fixed issue with portfolio username not wrapping

--- a/react-vite/src/components/Portfolio/Portfolio-CRUD/Create/CreatePortfolio.css
+++ b/react-vite/src/components/Portfolio/Portfolio-CRUD/Create/CreatePortfolio.css
@@ -12,10 +12,15 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+      align-items: center;
+      width: 100%;
 }
 
 #portfolio-section-1 h1 {
       color: #8A7C9C;
+      width: 28%;
+      word-wrap: break-word;
+      flex-wrap: wrap;
 }
 
 #name-input, #total-portfolio-amount,
